--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,29 @@
   font-display: swap;
   src: url('~assets/fonts/Kantumruy-Regular.ttf') format('truetype');
 }
+
+/* Custom Animations */
+
+/* .left, .fade-leave-active {
+  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  opacity: 0;
+}
+
+.right, .fade-leave-active {
+  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  opacity: 0;
+} */
+
+/* .fade-enter-active {
+  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  opacity: 0;
+}
+
+.fade-leave-active {
+  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  opacity: 0;
+} */
+
 /*Page component */
 .page-enter-active,
 .page-leave-active {
