--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,15 +34,10 @@
   opacity: 0;
 } */
 
-/* .fade-enter-active {
-  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+ .fade-enter-active {
+  transition: all .4s ease-in-out;
   opacity: 0;
-}
-
-.fade-leave-active {
-  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
-  opacity: 0;
-} */
+  }
 
 /*Page component */
 .page-enter-active,
