--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'Source Sans Pro';
   font-style: normal;
   font-weight: 400;
@@ -20,7 +20,7 @@
   font-weight: 400;
   font-display: swap;
   src: url('~assets/fonts/Kantumruy-Regular.ttf') format('truetype');
-}
+} */
 
 /* Custom Animations */
 
